--- a/doc/TurtleRazeRapport.tex
+++ b/doc/TurtleRazeRapport.tex
@@ -10,7 +10,7 @@
 \fvset{tabsize=4}            % Tabulatorpositioner
 \fvset{fontsize=\small}      % Lagom storlek för programlistor
 
-\title{TurtleRaze \\
+\title{TurtleRace \\
 	Inlämningsuppgift 1, Programmeringsteknik för C/D}
 \author{Bernt Christensen, C11 (dic11bch@student.lu.se)\\
 Johan Bäversjö, C11 (dic11jba@student.lu.se)}
@@ -68,7 +68,7 @@ Båda skölldpaddorna har okända namn, vilket medför att det inte är möjligt
 
 
 \section{Programlistor}
-Klasserna finns i filer med motsvarande namn. Till exempel innehåller filen  \code{RazeTrack.java} klassen \code{RazeTrack}. Alla klasser som används finns i samma katalog som huvudprogrammet
+Klasserna finns i filer med motsvarande namn. Till exempel innehåller filen  \code{RaceTrack.java} klassen \code{RaceTrack}. Alla klasser som används finns i samma katalog som huvudprogrammet
 
 \subsection{\code{TurtleRace}}
 \VerbatimInput{../src/TurtleRace.java}
