--- a/doc/TurtleRazeRapport.tex
+++ b/doc/TurtleRazeRapport.tex
@@ -36,7 +36,7 @@ Uppgiften består i att skapa en tävlingsbana som är oberoende av vad för tä
 
 Så här kommer ett lopp att se ut:
 \begin{center}
-\includegraphics[scale=0.35]{turtle_race.png}
+\includegraphics[scale=0.29]{turtle_race.png}
 \end{center}
 Längst ner och högst upp på bilden kan start- respektive mållinje ses. De två lodräta linjerna representerar de sköldpaddor som tävlar mot varandra.
 
@@ -70,9 +70,9 @@ Programmet kan endast hantera ett lopp mellan två stycken sköldpaddor i dess n
 
 En förbättring hade varit att använda en vektor istället för dynamiskt kunna bestämma antalet skäldpaddor.
 
-Båda skölldpaddorna har okända namn, vilket medför att det inte är möjligt att ta reda på vilken sköldpadda som vunnit bortsett från det visuella resultatet. 
+Båda sköldpaddorna har okända namn, vilket medför att det inte är möjligt att ta reda på vilken sköldpadda som vunnit bortsett från det visuella resultatet. 
 
-För att kunna koppla ihop detta programmet med andra system hade vi till exempel låtit användaren specifiera alla sköldpaddor som parametrar för programmet vid uppstart. Programmet hade sedan skrivit ut namnet på vinnaren.
+För att kunna koppla ihop det här programmet med andra system hade vi till exempel låtit användaren specifiera alla sköldpaddor som parametrar för programmet vid uppstart. Programmet hade sedan skrivit ut namnet på vinnaren.
 
 
 \section{Programlistor}
@@ -91,9 +91,5 @@ Klasserna finns i filer med motsvarande namn. Till exempel innehåller filen  \c
 \subsection{\code{RacingEvent}}
 \VerbatimInput{../src/RacingEvent.java}
 
-
-%\VerbatimInput{CarWash.java}
-
-%\ldots\ osv, liknande programlistor för samtliga klasser.
 
 \end{document}                  % Slut på dokumentet
