--- a/doc/TurtleRazeRapport.tex
+++ b/doc/TurtleRazeRapport.tex
@@ -68,10 +68,9 @@ Nedan följer en beskrivning till flödet i programmet:
 \section{Brister och kommentarer}
 Programmet kan endast hantera ett lopp mellan två stycken sköldpaddor i dess nuvarande utförande. För att kunna lägga till sköldpaddor behövs stora redigeringar i koden göras.
 
-En förbättring hade varit att använda en vektor istället för dynamiskt kunna bestämma antalet sköldpaddor.
+En förbättring hade varit att använda en vektor istället för att dynamiskt kunna bestämma antalet sköldpaddor. En referens till varje sköldpadda skulle finnas i vektorn. Under loppet hade vi vid varje steg itererat över alla sköldpaddor och flyttat dessa framåt.
 
 Båda sköldpaddorna har okända namn, vilket medför att det inte är möjligt att ta reda på vilken sköldpadda som vunnit bortsett från det visuella resultatet. 
-
 För att kunna koppla ihop det här programmet med andra system hade vi till exempel låtit användaren specificera alla sköldpaddor som parametrar för programmet vid uppstart. Programmet hade sedan skrivit ut namnet på vinnaren.
 
 
@@ -92,4 +91,4 @@ Klasserna finns i filer med motsvarande namn. Till exempel innehåller filen  \c
 \VerbatimInput{../src/RacingEvent.java}
 
 
-\end{document}                  % Slut på dokumentet
+\end{document}
